app/assets/stylesheets/api/home_page.scss
.home {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.home-main {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.home-main-matches-search {
  position: relative;
  width: 300px;
  height: 40px;
  z-index: 2;
  -webkit-appearance: none;
  background-color: #fff;
  border: 1px solid #ccd0d9;
  color: #2a2f35;
  -webkit-rtl-ordering: logical;
  user-select: text;
  cursor: auto;
  padding: 1px;
  border-radius: 5px;
  padding-left: 12px;
  padding-right: 28px;
  font-size: 17px;
  font-weight: 100;
}


.home-main-above-matches {
  display: flex;
  justify-content: space-between;
}

.home-main-matches {
  width: 900px;
  margin: 20px;
  margin-top: 60px;
  margin-bottom: 100px;
}

.home-main-matches-title {
  font-size: 20px;
  font-weight: 600;
  font-family: "Roboto";
  color: white;
  display: flex;
  align-items: flex-end;
}

.home-main-matches-thumbnail-container {
  display: flex;
  justify-content: center;
  overflow: scroll;
  margin-top: 10px;
  padding-bottom: 10px;
  height: 255px;
  max-width: 900px;
  overflow-y: hidden;
}

.home-main-matches-thumbnail-container::-webkit-scrollbar-track
{
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	background-color: #F5F5F5;
  border-radius: 10px;
}

.home-main-matches-thumbnail-container::-webkit-scrollbar
{
  height: 8px;
  width: 3px;
	background-color: #F5F5F5;
  border-radius: 10px;
}

.home-main-matches-thumbnail-container::-webkit-scrollbar-thumb
{
	background-color: #000000;
  border-radius: 10px;
}


.home-main-matches-thumbnail-container:nth-child(2) {
  padding-left: 360px;
}

.home-main-matches-thumbnail {
  margin: 5px;
  width: 200px;
  height: 200px;
  border-radius: 5px;
  transition: all .2s ease-in-out;
  object-fit: cover;

  &:hover {
    cursor: pointer;
    transform: scale(1.05);
  }
}

.home-main-matches-thumbnail-username {
  color: white;
  padding-left: 15px;
  padding-top: 1px;
  &:hover {
    color: rgb(74,114,224);
  }
  font-family: "Roboto";
  font-weight: 100;
}

.home-main-below {
  background: white;
  width: 100%;
  height: auto;
}

.home-main-questions {
  color: black;
}

.home-main-matches-thumbnail-matchpercent {
  color: rgb(74,114,224);
  padding-left: 15px;
  padding-top: 1px;
  font-family: "Roboto";
  font-weight: 300;
}

